--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <h2 class="section__title">About Me</h2>
                 <span class="section__subtitle">My Introduction</span>
                 <div class="about__container container grid">
-                    <img src="/assets/img/about.jpg" alt="omar ehab" class="about__img">
+                    <img src="assets/img/about.jpg" alt="omar ehab" class="about__img">
 
                     <div class="about__data">
                         <p class="about__description">Software Engineer, 
@@ -587,7 +587,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="./assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">
                                     Pyrabase Real Estate
@@ -605,7 +605,7 @@
 
                         <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="./assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">
                                     Awamer System
@@ -620,7 +620,7 @@
 
                         <!--==================== PORTFOLIO 3 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="./assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">
                                     Productive Families
@@ -635,7 +635,7 @@
 
                         <!--==================== PORTFOLIO 4 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="./assets/img/portfolio4.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/portfolio4.jpg" alt="" class="portfolio__img">
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">
                                     Evanpharma Ecommerce
@@ -650,7 +650,7 @@
 
                         <!--==================== PORTFOLIO 4 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="./assets/img/portfolio5.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/portfolio5.jpg" alt="" class="portfolio__img">
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">
                                     Hanzaker
