--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="about__data">
                         <p class="about__description">Software Engineer, 
                             with extensive knowledge and years of experience, 
-                            working in web developing and mobile applications, delevring high quailty work.</p>
+                            working in web developing and mobile applications, delivering high quailty work.</p>
 
                         <div class="about__info">
                             <div>
