update Meta tags

--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
         <!-- <link rel="stylesheet" href="assets/css/fonts.css"> -->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Omar Ehab Portfolio</title>
+
+        <meta name="title" content="Omar Ehab Portfolio">
+        <meta name="description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quailty work.">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://omarehab.net/">
+        <meta property="og:title" content="Omar Ehab Portfolio">
+        <meta property="og:description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quailty work.">
+        <meta property="og:image" content="assets/img/perfil.png">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://omarehab.net/">
+        <meta property="twitter:title" content="Omar Ehab Portfolio">
+        <meta property="twitter:description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quailty work.">
+        <meta property="twitter:image" content="assets/img/perfil.png">
     </head>
     <body>
         <!--==================== HEADER ====================-->
