--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <meta property="og:url" content="https://omarehab.net/">
         <meta property="og:title" content="Omar Ehab Portfolio">
         <meta property="og:description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quailty work.">
-        <meta property="og:image" content="assets/img/perfil.png">
+        <meta property="og:image" content="assets/img/meta_img.jpg">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://omarehab.net/">
         <meta property="twitter:title" content="Omar Ehab Portfolio">
         <meta property="twitter:description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quailty work.">
-        <meta property="twitter:image" content="assets/img/perfil.png">
+        <meta property="twitter:image" content="assets/img/meta_img.jpg">
     </head>
     <body>
         <!--==================== HEADER ====================-->
