--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <title>Omar Ehab Portfolio</title>
 
         <meta name="title" content="Omar Ehab Portfolio">
-        <meta name="description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quailty work.">
+        <meta name="description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quality work.">
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
@@ -70,7 +70,7 @@
                         </li>
                         <li class="nav__item">
                             <a href="#contact" class="nav__link">
-                                <i class="uil uil-message nav__icon"></i> Contant Me
+                                <i class="uil uil-message nav__icon"></i> Contact Me
                             </a>
                         </li>
                     </ul>
@@ -130,7 +130,7 @@
                             <h1 class="home__title">Hi, I'm Omar</h1>
                             <h3 class="home__subtitle">Software Engineer</h3>
                             <p class="home__description">
-                                High Level Experience in web design, development, crossplatform mobile applications, producing quailty work.
+                                High Level Experience in web design, development, crossplatform mobile applications, producing quality work.
                             </p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me <i class="uil uil-message button__icon"></i>
@@ -158,7 +158,7 @@
                     <div class="about__data">
                         <p class="about__description">Software Engineer, 
                             with extensive knowledge and years of experience, 
-                            working in web developing and mobile applications, delivering high quailty work.</p>
+                            working in web developing and mobile applications, delivering high quality work.</p>
 
                         <div class="about__info">
                             <div>
@@ -198,7 +198,7 @@
                             <div class="skills__header">
                                 <i class="uil uil-brackets-curly skills__icon"></i>
                                 <div>
-                                    <h1 class="skills__titles">Fontend Development</h1>
+                                    <h1 class="skills__titles">Frontend Development</h1>
                                     <span class="skills__subtitle">More Than 2 Years</span>
                                 </div>
                                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -852,7 +852,7 @@
                         </div>
                     </div>
                     <form action="https://formsubmit.io/send/5e8063c8-08d2-442d-9cfe-88c1a1ca8742" method="POST" class="contact__form grid">
-                        <input name="_redirect" type="hidden" id="name" value="http://localhost:5500/index.html?thanks=true">
+                        <input name="_redirect" type="hidden" id="redirect" value="http://localhost:5500/index.html?thanks=true">
                         
                         
                         <div class="contact__inputs grid">
