update Meta tags

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <!-- <link rel="stylesheet" href="assets/css/fonts.css"> -->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Omar Ehab Portfolio</title>
+        <title>Omar Ehab</title>
 
-        <meta name="title" content="Omar Ehab Portfolio">
+        <meta name="title" content="Omar Ehab">
         <meta name="description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quality work.">
 
         <!-- Open Graph / Facebook -->
@@ -32,7 +32,7 @@
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://omarehab.net/">
-        <meta property="twitter:title" content="Omar Ehab Portfolio">
+        <meta property="twitter:title" content="Omar Ehab">
         <meta property="twitter:description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quailty work.">
         <meta property="twitter:image" content="assets/img/meta_img.jpg">
     </head>
