--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Omar Ehab</title>
+        <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
 
         <meta name="title" content="Omar Ehab">
         <meta name="description" content="High Level Experience in web design, development, crossplatform mobile applications, producing quality work.">
