--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
-                <a href="#" class="nav__logo">Omar</a>
+                <a href="https://omarehab.net/" class="nav__logo">Omar</a>
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list grid">
                         <li class="nav__item">
